LegUp/214_benchmarks/extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main/log.txt
# annotate loop labels
../../../mark_labels.pl extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.c > extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main_labeled.c
# produces pre-link time optimization binary bitcode: extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.prelto.bc
clang extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main_labeled.c -emit-llvm -c -fno-builtin -m32 -I ../../../lib/include/ -I /usr/include/i386-linux-gnu -O3 -o extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main.prelto.1.bc
extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main_labeled.c:57:19: error: expected identifier or '('
  const uint8_t (*)[8] dither;
                  ^
extr_.FFmpeglibavfiltervf_spp.c_store_slice16_c_with_main_labeled.c:59:84: error: use of undeclared identifier 'dither'
  store_slice16_c(dst, src, dst_linesize, src_linesize, width, height, log2_scale, dither, depth);
                                                                                   ^
2 errors generated.
make: *** [all] Error 1
